lineup grid + img banner

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css"/>
     <link rel="stylesheet" href="bootstrap/css/bootstrap-theme.css"/>
+    <link rel="stylesheet" href="css/gridster.css"/>
   </head>
   <body>
     <nav>
@@ -37,18 +38,42 @@
         <div class="section-intro"> 
           <div class="wrapper">
             <div class="inner">
-              <p>Abifestival am alten AKW in Lingen!</p>
-              <p>Willkommen auf den Internetseiten des Abifestivals! Hier erfährst du alles, was du über das Abifestival wissen musst. Sollte etwas fehlen, oder unklar sein, melde dich bei uns.</p>
+              <div>Abifestival am alten AKW in Lingen!</div>
+              <p>Willkommen auf den Internetseiten des Abifestivals! Hier erf&auml;hrst du alles, was du &uuml;ber das Abifestival wissen musst. Sollte etwas fehlen, oder unklar sein, melde dich bei uns.</p>
               <p>Das Abifestival ist einzigartig.</p>
-              <p>Das Abifestival ist mit Liebe gemacht!</p>
-              <p>Wir hoffen, dass du dich bei uns wohl fühlst. </p>
+              <p>Das Abifestival ist mit &#9829; gemacht!</p>
+              <p>Wir hoffen, dass du dich bei uns wohl f&uuml;hlst.</p>
             </div>
           </div>
         </div>
+        <div class="section-lineup">
+          <div class="wrapper">
+            <h2>Lineup 2016</h2>
+            <div class="gridster">
+              <ul>
+                <li data-row="1" data-col="1" data-sizex="1" data-sizey="1"><img src="src/img/artist/kolle.jpg"/></li>
+                <li data-row="2" data-col="1" data-sizex="1" data-sizey="2"><img src="src/img/artist/mac.jpg"/></li>
+                <li data-row="3" data-col="1" data-sizex="2" data-sizey="1"><img src="src/img/artist/wiz.jpg"/></li>
+                <li data-row="3" data-col="1" data-sizex="1" data-sizey="1"><img src="src/img/artist/dajuan.jpg"/></li>
+                <li data-row="3" data-col="2" data-sizex="1" data-sizey="1"><img src="src/img/artist/weekend.jpg"/></li>
+                <li data-row="1" data-col="2" data-sizex="2" data-sizey="1"><img src="src/img/artist/bronson.jpg"/></li>
+                <li data-row="2" data-col="2" data-sizex="1" data-sizey="1"><img src="src/img/artist/miss.jpg"/></li>
+                <li data-row="1" data-col="4" data-sizex="1" data-sizey="2"><img src="src/img/artist/marteria.jpg"/></li>
+                <li data-row="2" data-col="4" data-sizex="2" data-sizey="1"><img src="src/img/artist/kiz.jpg"/></li>
+                <li data-row="3" data-col="4" data-sizex="1" data-sizey="1"><img src="src/img/artist/cas.jpg"/></li>
+                <li data-row="4" data-col="4" data-sizex="1" data-sizey="1"><img src="src/img/artist/cro.jpg"/></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="section-banner">
+          <div class="wrapper"></div>
+        </div>
       </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>
+    <script src="js/gridster.js"></script>
     <script src="js/script.js"></script>
     <script src="js/jquery.sticky.js"></script>
   </body>
