--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                 <li data-row="4" data-col="4" data-sizex="1" data-sizey="1"><img src="src/img/artist/cro.jpg"/></li>
               </ul>
             </div>
+            <button>+ Mehr</button>
           </div>
         </div>
         <div class="section-banner">
