overlays und neue sections

--- a/index.html
+++ b/index.html
@@ -51,25 +51,131 @@
             <h2>Lineup 2016</h2>
             <div class="gridster">
               <ul>
-                <li data-row="1" data-col="1" data-sizex="1" data-sizey="1"><img src="src/img/artist/kolle.jpg"/></li>
-                <li data-row="2" data-col="1" data-sizex="1" data-sizey="2"><img src="src/img/artist/mac.jpg"/></li>
-                <li data-row="3" data-col="1" data-sizex="2" data-sizey="1"><img src="src/img/artist/wiz.jpg"/></li>
-                <li data-row="3" data-col="1" data-sizex="1" data-sizey="1"><img src="src/img/artist/dajuan.jpg"/></li>
-                <li data-row="3" data-col="2" data-sizex="1" data-sizey="1"><img src="src/img/artist/weekend.jpg"/></li>
-                <li data-row="1" data-col="2" data-sizex="2" data-sizey="1"><img src="src/img/artist/bronson.jpg"/></li>
-                <li data-row="2" data-col="2" data-sizex="1" data-sizey="1"><img src="src/img/artist/miss.jpg"/></li>
-                <li data-row="1" data-col="4" data-sizex="1" data-sizey="2"><img src="src/img/artist/marteria.jpg"/></li>
-                <li data-row="2" data-col="4" data-sizex="2" data-sizey="1"><img src="src/img/artist/kiz.jpg"/></li>
-                <li data-row="3" data-col="4" data-sizex="1" data-sizey="1"><img src="src/img/artist/cas.jpg"/></li>
-                <li data-row="4" data-col="4" data-sizex="1" data-sizey="1"><img src="src/img/artist/cro.jpg"/></li>
+                <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+                  <div class="overlay">
+                    <div class="line-up-content">Kollegah</div>
+                  </div><img src="src/img/artist/kolle.jpg"/>
+                </li>
+                <li data-row="2" data-col="1" data-sizex="1" data-sizey="2">
+                  <div class="overlay">
+                    <div class="line-up-content">Mac Miller</div>
+                  </div><img src="src/img/artist/mac.jpg"/>
+                </li>
+                <li data-row="3" data-col="1" data-sizex="2" data-sizey="1">
+                  <div class="overlay">
+                    <div class="line-up-content">Wiz Khalifa</div>
+                  </div><img src="src/img/artist/wiz.jpg"/>
+                </li>
+                <li data-row="3" data-col="1" data-sizex="1" data-sizey="1">
+                  <div class="overlay">
+                    <div class="line-up-content">Dajuan</div>
+                  </div><img src="src/img/artist/dajuan.jpg"/>
+                </li>
+                <li data-row="3" data-col="2" data-sizex="1" data-sizey="1">
+                  <div class="overlay">
+                    <div class="line-up-content">Weekend</div>
+                  </div><img src="src/img/artist/weekend.jpg"/>
+                </li>
+                <li data-row="1" data-col="2" data-sizex="2" data-sizey="1">
+                  <div class="overlay">
+                    <div class="line-up-content">Bronson</div>
+                  </div><img src="src/img/artist/bronson.jpg"/>
+                </li>
+                <li data-row="2" data-col="2" data-sizex="1" data-sizey="1">
+                  <div class="overlay">
+                    <div class="line-up-content">Miss Platnum</div>
+                  </div><img src="src/img/artist/miss.jpg"/>
+                </li>
+                <li data-row="1" data-col="4" data-sizex="1" data-sizey="2">
+                  <div class="overlay">
+                    <div class="line-up-content">Marteria</div>
+                  </div><img src="src/img/artist/marteria.jpg"/>
+                </li>
+                <li data-row="2" data-col="4" data-sizex="2" data-sizey="1">
+                  <div class="overlay">
+                    <div class="line-up-content">KIZ</div>
+                  </div><img src="src/img/artist/kiz.jpg"/>
+                </li>
+                <li data-row="3" data-col="4" data-sizex="1" data-sizey="1">
+                  <div class="overlay">
+                    <div class="line-up-content">Casper</div>
+                  </div><img src="src/img/artist/cas.jpg"/>
+                </li>
+                <li data-row="4" data-col="4" data-sizex="1" data-sizey="1">
+                  <div class="overlay">
+                    <div class="line-up-content">Cro</div>
+                  </div><img src="src/img/artist/cro.jpg"/>
+                </li>
               </ul>
             </div>
-            <button>+ Mehr</button>
+            <div class="btn">+ Mehr</div>
+          </div>
+        </div>
+        <div class="section-news">
+          <div class="wrapper">
+            <h2>News</h2>
+            <div class="row">
+              <div class="col-md-4">
+                <div style="background-image: url(src/img/plakat.png)" class="news-head"></div>
+                <div class="news-foot">
+                  <div class="box-text"> 
+                    <div>Zelten auf dem Abifestival</div>
+                  </div>
+                  <div class="box-btn">
+                    <div class="btn-news">Mehr</div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div style="background-image: url(src/img/plakat2.png)" class="news-head"></div>
+                <div class="news-foot">
+                  <div class="box-text"> 
+                    <div>Abifestival-App</div>
+                  </div>
+                  <div class="box-btn">
+                    <div class="btn-news">Mehr</div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div style="background-image: url(src/img/plakat2.png)" class="news-head"></div>
+                <div class="news-foot">
+                  <div class="box-text"> 
+                    <div>Andere News</div>
+                  </div>
+                  <div class="box-btn">
+                    <div class="btn-news">Mehr</div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="section-banner">
           <div class="wrapper"></div>
         </div>
+        <div class="section-video">
+          <div class="wrapper">
+            <h2>Aftermovie 2015</h2>
+            <div class="video-box">
+              <iframe src="https://player.vimeo.com/video/136583980?byline=0" width="700" height="393" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe>
+            </div>
+          </div>
+        </div>
+        <div class="section-sponsors">
+          <div class="wrapper">
+            <div class="row">
+              <h2>Sponsoren</h2>
+              <div class="col-md-4"><img src="src/img/sponsoren/1.png"/></div>
+              <div class="col-md-4"><img src="src/img/sponsoren/2.png"/></div>
+              <div class="col-md-4"><img src="src/img/sponsoren/3.png"/></div>
+              <div class="col-md-4"> <img src="src/img/sponsoren/4.png"/></div>
+              <div class="col-md-4"><img src="src/img/sponsoren/6.png"/></div>
+              <div class="col-md-4"> <img src="src/img/sponsoren/5.png"/></div>
+            </div>
+          </div>
+        </div>
+        
       </div>
     </div>
     <script src="js/jquery.min.js"></script>
