--- a/index.html
+++ b/index.html
@@ -28,22 +28,26 @@
     </video>
     <div class="content-container">
       <div class="container-video">
-        <div id="animate"><img src="src/img/logo.png"/>
-          <h1>Abifestival 2016</h1>
+        <div id="animate"><img id="fadeOutElement" src="src/img/logo.png"/>
+          <h1>Abifestival 2016 </h1>
           <h3>umsonst & und drau&szlig;en </h3>
-          <button class="btn-video">Alle Infos</button>
+        </div>
+        <div class="arrow-sontainer"><a href="#anker1"> 
+            <div id="bindmovingarrow" class="arrow"></div></a>
         </div>
       </div>
       <div class="container-other">
-        <div class="section-intro"> 
+        <div class="section-intro"><a name="anker1"> </a>
           <div class="wrapper">
-            <div class="inner">
-              <div>Abifestival am alten AKW in Lingen!</div>
-              <p>Willkommen auf den Internetseiten des Abifestivals! Hier erf&auml;hrst du alles, was du &uuml;ber das Abifestival wissen musst. Sollte etwas fehlen, oder unklar sein, melde dich bei uns.</p>
-              <p>Das Abifestival ist einzigartig.</p>
-              <p>Das Abifestival ist mit &#9829; gemacht!</p>
-              <p>Wir hoffen, dass du dich bei uns wohl f&uuml;hlst.</p>
+            <div class="row">
+              <div class="col-md-6 left">
+                <h3>Abifestival am Alten AKW Lingen</h3>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                <div class="btn">+ Mehr erfahren</div>
+              </div>
+              <div class="col-md-6 right"></div>
             </div>
+            <div class="points"><img src="src/img/points.png"/></div>
           </div>
         </div>
         <div class="section-lineup">
@@ -174,6 +178,9 @@
               <div class="col-md-4"> <img src="src/img/sponsoren/5.png"/></div>
             </div>
           </div>
+        </div>
+        <div class="footer">
+          <div class="wrapper"></div>
         </div>
         
       </div>
